2010-02-04  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* common/libnwamui.h:
	* daemon/status_icon.c: (nwam_menu_create_static_menuitems):

	Tweak new panel menu wording slightly to match online help
	(s/Network Modifier Applications/ Network Modifiers), 
	and change command line options from -v/--vpn-pref-dialog to 
	-m/--nm-pref-dialog.

2010-02-03  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* capplet/nwam_conn_stat_panel.c: (vpn_clicked_cb):
	* capplet/nwam_vpn_pref_dialog.c: (vpn_pref_clicked_cb),
	(nwam_vpn_pre_selection_validate):
	* common/nwamui_cond.c: (nwamui_cond_field_to_str):
	* daemon/nwam-tooltip-widget.c: (nwam_object_notify):
	* daemon/status_icon.c: (nwam_menu_create_static_menuitems):
	* daemon/status_icon_tooltip.c: (nwam_tooltip_widget_update_enm):
	* tests/main.c:
	* ui/nwam-manager-properties.ui:

	Change all user-visible occurrences of 'VPN Application' and
	related variations, to 'Network Modifier' or equivalent variation.
	Per agreement on nwam-dev mailing list:
	http://mail.opensolaris.org/pipermail/nwam-dev/2010-February/005821.html

2010-02-01  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_vpn_pref_dialog.c (nwam_vpn_selection_changed):
	Fixed 14261 [132] nwam VPN when Editing start/stop rules SMF
	service is unselected

2010-01-29  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncp.c (nwamui_ncp_init), (nwamui_ncp_get_property),
	(nwamui_ncp_finalize), (nwamui_object_real_reload),
	(nwamui_ncp_remove_ncu), (nwamui_ncp_add_ncu),
	(nwam_ncu_walker_cb), (ncu_notify_cb), (row_deleted_cb),
	(row_inserted_cb), (rows_reordered_cb):
	* common/nwamui_ncp.h: Clean unused code.
	* common/nwamui_prof.c:
	* common/nwamui_prof.h: Fixed 14232 [132] nwam gui unavailable to
	non root users.

2010-01-27  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (nwamd_event_handler):
	* common/nwamui_ncu.c:
	* common/nwamui_wifi_net.c (nwamui_wifi_net_finalize): Fixed 14183
	wlan_connection_report (failed report) doesn't contain a valid